--- a/tutorials/g_td_sim/index.html
+++ b/tutorials/g_td_sim/index.html
@@ -190,9 +190,8 @@ RHS compiled
 <p>After Fourier transformation, we obtain</p>
 <div class="arithmatex">\[-i\omega \vec{p}(\vec{r}, \omega) = \vec{j}(\vec{r}, \omega)\]</div>
 <p>Its integrated form is given by</p>
-<div class="arithmatex">\[\int d\vec{r} \dot{\vec{p}}(\vec{r},t) = \dot{\vec{p}}(t) = \int d\vec{r} \vec{j}(\vec{r},t) =  \vec{j}(t)\]</div>
-<p><span class="arithmatex">\(\vec{j}(t)\)</span> and <span class="arithmatex">\(\vec{p}(t)\)</span> are the total current and dipole moment respectively. We can
-obtain their expectation values directly from the time-domain simulations. The continuity equation above can be verified as follows</p>
+<div class="arithmatex">\[\sum_i \dot{\vec{p}}(\vec{r}_i,t) = \dot{\vec{p}}(t) = \sum_i d\vec{r} \vec{j}(\vec{r}_i,t) =  \vec{j}(t)\]</div>
+<p><span class="arithmatex">\(\vec{j}(t)\)</span> and <span class="arithmatex">\(\vec{p}(t)\)</span> are the total current and dipole moment respectively and we have taken the spatially discrete basis into account. We can obtain operator expectation values directly from the time-domain simulations. The continuity equation above can be verified as follows</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-6-1"><a id="__codelineno-6-1" name="__codelineno-6-1" href="#__codelineno-6-1"></a><span class="kn">import</span><span class="w"> </span><span class="nn">matplotlib.pyplot</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">plt</span>
 </span><span id="__span-6-2"><a id="__codelineno-6-2" name="__codelineno-6-2" href="#__codelineno-6-2"></a><span class="n">p</span> <span class="o">=</span> <span class="o">-</span><span class="p">(</span><span class="n">omegas</span> <span class="o">*</span> <span class="n">output_omega</span><span class="p">[:,</span><span class="mi">0</span><span class="p">])</span><span class="o">.</span><span class="n">imag</span>
 </span><span id="__span-6-3"><a id="__codelineno-6-3" name="__codelineno-6-3" href="#__codelineno-6-3"></a><span class="n">j</span> <span class="o">=</span> <span class="n">output_omega</span><span class="p">[:,</span><span class="mi">3</span><span class="p">]</span><span class="o">.</span><span class="n">real</span>
