--- a/tutorials/i_linear_response/index.html
+++ b/tutorials/i_linear_response/index.html
@@ -137,7 +137,7 @@
 </span></code></pre></div>
 <p><img alt="png" src="../i_linear_response_files/i_linear_response_4_0.png" /></p>
 <p>We obtain the polarizability for a uniform external field according to </p>
-<p><span class="arithmatex">\(<span class="arithmatex">\(\\alpha_{ij}(\omega) = x_j \chi_0(\omega)/ (1- C \chi_0(\omega)) x_i\)</span>\)</span>,</p>
+<div class="arithmatex">\[\alpha_{ij}(\omega) = x_j \chi_0(\omega)/ (1- C \chi_0(\omega)) x_i\]</div>
 <p>where <span class="arithmatex">\(\chi_0(\omega)\)</span> is the bare density-density correlator and <span class="arithmatex">\(C\)</span> is the Coulomb matrix, as in <a href="https://pubs.acs.org/doi/10.1021/nn204780e">Thongrattanasiri et al.</a></p>
 <p>Here, we focus on an external x-polarized field</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-1-1"><a id="__codelineno-1-1" name="__codelineno-1-1" href="#__codelineno-1-1"></a><span class="n">polarizability</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_polarizability_rpa</span><span class="p">(</span>
