deploy: 18d9c4bcee3596ae9e1d9194ba317f1ee4c5e0bd

--- a/cite/index.html
+++ b/cite/index.html
@@ -142,10 +142,10 @@
 <p><strong>Müller, M. M., Kosik, M., Pelc, M., Bryant, G. W., Ayuela, A., Rockstuhl, C., &amp; Słowik, K.</strong> (2021). <em>From single-particle-like to interaction-mediated plasmonic resonances in graphene nanoantennas</em>. <em>Journal of Applied Physics</em>, <strong>129</strong>(9), 093103. <a href="https://doi.org/10.1063/5.0044450">https://doi.org/10.1063/5.0044450</a></p>
 </li>
 <li>
-<p><strong>Bryant, G. W., Kosik, M., Müller, M., Słowik, K., Ayuela, A., Rockstuhl, C., &amp; Pelc, M.</strong> (2022). <em>Revising quantum optical phenomena in adatoms coupled to graphene nanoantennas</em>. <em>Nanophotonics</em>, <strong>11</strong>(14), 3317–3326. <a href="https://doi.org/10.1515/nanoph-2022-0154">https://doi.org/10.1515/nanoph-2022-0154</a></p>
+<p><strong>Miriam Kosik, Marvin M. Müller , Karolina Słowik, Garnett Bryant, Andrés Ayuela, Carsten Rockstuhl &amp; Marta Pelc</strong> (2022). <em>Revising quantum optical phenomena in adatoms coupled to graphene nanoantennas</em>. <em>Nanophotonics</em>, <strong>11</strong>(14), 3317–3326. <a href="https://doi.org/10.1515/nanoph-2022-0154">https://doi.org/10.1515/nanoph-2022-0154</a></p>
 </li>
 <li>
-<p><strong>Pelc, M., Słowik, K., &amp; Bryant, G. W.</strong> (2020). <em>Energy-based plasmonicity index to characterize optical resonances in nanostructures</em>. <em>The Journal of Physical Chemistry C</em>, <strong>124</strong>(44), 24254–24263. <a href="https://doi.org/10.1021/acs.jpcc.0c07964">https://doi.org/10.1021/acs.jpcc.0c07964</a></p>
+<p><strong>Marvin M. Müller, Miriam Kosik, Marta Pelc, Garnett W. Bryant, Andrés Ayuela, Carsten Rockstuhl &amp; Karolina Słowik</strong> (2020). <em>Energy-based plasmonicity index to characterize optical resonances in nanostructures</em>. <em>The Journal of Physical Chemistry C</em>, <strong>124</strong>(44), 24254–24263. <a href="https://doi.org/10.1021/acs.jpcc.0c07964">https://doi.org/10.1021/acs.jpcc.0c07964</a></p>
 </li>
 </ol>
               
