deploy: f426e8e2a48c5b3cae4005a4939bf5ce362796fa

--- a/tutorials/e_electric_fields/index.html
+++ b/tutorials/e_electric_fields/index.html
@@ -136,7 +136,7 @@ Wave(amplitudes: list[float], frequency: float)
 
     Args:
         amplitudes: electric field amplitudes in xyz-components
-        frequency: frequency
+        frequency: angular frequency
 
     Returns:
        Function that computes the electric field as a functon of time
