--- a/tutorials/j_defining_materials/index.html
+++ b/tutorials/j_defining_materials/index.html
@@ -181,7 +181,7 @@
         )
         ```
 </code></pre></div>
-<p>So, the Material class essentially defines a small language we can use to specify a material. A preliminary, work-in-progress version of the Hubbard model would look like this</p>
+<p>The Material class offers all specialized functions to specify a material from a TB model. A preliminary, work-in-progress version of the Hubbard model would look like this</p>
 <div class="language-python highlight"><pre><span></span><code><span id="__span-2-1"><a id="__codelineno-2-1" name="__codelineno-2-1" href="#__codelineno-2-1"></a><span class="n">t</span> <span class="o">=</span> <span class="mf">1.</span> <span class="c1"># nearest-neighbor hopping</span>
 </span><span id="__span-2-2"><a id="__codelineno-2-2" name="__codelineno-2-2" href="#__codelineno-2-2"></a><span class="n">U</span> <span class="o">=</span> <span class="mf">0.1</span> <span class="c1"># onsite coulomb repulsion</span>
 </span><span id="__span-2-3"><a id="__codelineno-2-3" name="__codelineno-2-3" href="#__codelineno-2-3"></a><span class="n">hubbard</span> <span class="o">=</span> <span class="p">(</span>
