--- a/about/index.html
+++ b/about/index.html
@@ -119,9 +119,11 @@
             <div class="section" itemprop="articleBody">
               
                 <h1 id="about">About</h1>
-<p>GRANAD is developed jointly at the <a href="https://www.kit.edu">Karlsruhe Institute of Technology</a> by the
-<a href="https://www.tfp.kit.edu/rockstuhl.php">Institute of Theoretical Solid State Physics</a>
-and at the <a href="https://www.umk.pl/">Nicolaus Copernicus University in Toruń</a> by the <a href="https://www.ifiz.umk.pl/">Department of Quantum Physics</a>.</p>
+<p>The GRANAD code and the underlying framework has been developed jointly at the following institutions:
+- <a href="https://www.kit.edu">Karlsruhe Institute of Technology</a> by the <a href="https://www.tfp.kit.edu/rockstuhl.php">Institute of Theoretical Solid State Physics</a>,
+- <a href="https://www.umk.pl/">Nicolaus Copernicus University in Toruń</a> by the <a href="https://www.ifiz.umk.pl/">Institute of Physics</a>,
+- <a href="https://dipc.org">Donostia International Physics Center</a>,
+- <a href="http://https://www.nist.gov/">National Institute of Standards and Technology</a> by the <a href="https://www.nist.gov/pml/nanoscale-device-characterization-division">Nanoscale Device Characterization Division</a>.</p>
               
             </div>
           </div><footer>
