--- a/tutorials/g_td_sim/index.html
+++ b/tutorials/g_td_sim/index.html
@@ -354,7 +354,7 @@ RHS compiled
 ">
 <b>Important Note:</b> The <code>diffrax</code> solver adjusts the simulation parameters automatically 
 depending on the initial values of physical parameters. Running stable calculations might require 
-some fine-tuning. Example scripts providing working setups are provided here.
+some fine-tuning. Example scripts providing working setups are provided [here](https://github.com/GRANADlauncher/granad/tree/main/docs_src/Time_Domain_Simulations).
 </div>
               
             </div>
