deploy: 3be1e8f07478c7a30dd5379b4663cb1619047601

--- a/main/tutorials/b_list_based_simulations/index.html
+++ b/main/tutorials/b_list_based_simulations/index.html
@@ -357,20 +357,10 @@ Included tags with number of orbitals: {&#39;atom&#39;: 2}
 <p>For this reason, the deletion (and append) operation on the orbital list may change or be removed entirely, meaning it wont be possible to add single orbitals or remove them from the structure. A likely and less dangerous replacement would be immutable, copyable data structures.</p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../ab_cutting/" class="btn btn-neutral float-left" title="Cutting"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../c_plotting/" class="btn btn-neutral float-right" title="Plotting">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
