--- a/main/tutorials/h_rabi_oscillations/index.html
+++ b/main/tutorials/h_rabi_oscillations/index.html
@@ -205,20 +205,10 @@ RHS compiled
 <p><img alt="png" src="../h_rabi_oscillations_files/h_rabi_oscillations_14_2.png" /></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../g_td_sim/" class="btn btn-neutral float-left" title="Time-Domain simulations"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../i_linear_response/" class="btn btn-neutral float-right" title="Linear response">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
