--- a/main/contact/index.html
+++ b/main/contact/index.html
@@ -129,20 +129,10 @@
 - <a href="http://https://www.nist.gov/">National Institute of Standards and Technology</a> by the <a href="https://www.nist.gov/pml/nanoscale-device-characterization-division">Nanoscale Device Characterization Division</a>.</p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../api/" class="btn btn-neutral float-left" title="API"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../how_to_cite/" class="btn btn-neutral float-right" title="How to cite">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
