--- a/main/how_to_cite/index.html
+++ b/main/how_to_cite/index.html
@@ -157,20 +157,10 @@ GRANAD was built based on the following framework extensions:</p>
 <p><strong>Pelc, M., Dams, D., Ghosh, A., Kosik, M., Müller, M., Rockstuhl, C., Ayuela, A., &amp; Słowik, K.</strong> (2024). <em>Single-particle approach to many-body relaxation dynamics</em>. <em>Physical Review A</em>, <strong>109</strong>, 022237. <a href="https://doi.org/10.1103/PhysRevA.109.022237">https://doi.org/10.1103/PhysRevA.109.022237</a></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../contact/" class="btn btn-neutral float-left" title="About"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../units/" class="btn btn-neutral float-right" title="Units">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
