--- a/main/index.html
+++ b/main/index.html
@@ -187,19 +187,10 @@
 <p><img alt="png" src="index_files/index_13_0.png" /></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="api/" class="btn btn-neutral float-right" title="API">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
@@ -236,5 +227,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-02-06 07:37:32.027903+00:00
+Build Date UTC : 2025-02-06 09:08:52.638817+00:00
 -->
