--- a/main/tutorials/a_getting_started/index.html
+++ b/main/tutorials/a_getting_started/index.html
@@ -339,20 +339,10 @@ RHS compiled
 <p><img alt="png" src="../a_getting_started_files/a_getting_started_54_0.png" /></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../0_tldr/" class="btn btn-neutral float-left" title="GRANAD at a glance"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../ab_cutting/" class="btn btn-neutral float-right" title="Cutting">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
