--- a/main/tutorials/c_plotting/index.html
+++ b/main/tutorials/c_plotting/index.html
@@ -265,20 +265,10 @@ The two square brakets on the colour bar represent the phase and the scaled ampl
 <p><img alt="png" src="../c_plotting_files/c_plotting_31_0.png" /></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../b_list_based_simulations/" class="btn btn-neutral float-left" title="List-based Simulations"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../d_basis_handling/" class="btn btn-neutral float-right" title="Basis Handling">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
