--- a/main/tutorials/d_basis_handling/index.html
+++ b/main/tutorials/d_basis_handling/index.html
@@ -156,20 +156,10 @@
 <p><img alt="png" src="../d_basis_handling_files/d_basis_handling_9_0.png" /></p>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../c_plotting/" class="btn btn-neutral float-left" title="Plotting"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../e_electric_fields/" class="btn btn-neutral float-right" title="Electric Fields">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
