--- a/main/tutorials/e_electric_fields/index.html
+++ b/main/tutorials/e_electric_fields/index.html
@@ -202,20 +202,10 @@ Similar to <code>Wave</code> and <code>Ramp</code>, <code>amplitudes</code> and 
 </span></code></pre></div>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../d_basis_handling/" class="btn btn-neutral float-left" title="Basis Handling"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../g_td_sim/" class="btn btn-neutral float-right" title="Time-Domain simulations">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
