--- a/main/tutorials/g_td_sim/index.html
+++ b/main/tutorials/g_td_sim/index.html
@@ -361,20 +361,10 @@ some fine-tuning. Example scripts providing working setups are provided <a href=
 </div>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../e_electric_fields/" class="btn btn-neutral float-left" title="Electric Fields"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../h_rabi_oscillations/" class="btn btn-neutral float-right" title="Rabi Oscillations">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
