--- a/main/tutorials/j_defining_materials/index.html
+++ b/main/tutorials/j_defining_materials/index.html
@@ -418,20 +418,10 @@ As an example, we will turn our ordinary graphene model into a direction-indepen
 </span></code></pre></div>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../i_linear_response/" class="btn btn-neutral float-left" title="Linear response"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../k_potentials/" class="btn btn-neutral float-right" title="Potentials">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
