--- a/main/tutorials/l_master/index.html
+++ b/main/tutorials/l_master/index.html
@@ -247,7 +247,7 @@ No artists with labels found to put in legend.  Note that artists whose label st
 <div class="language-python highlight"><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="n">dissipator_model</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_dissipator</span><span class="p">(</span><span class="n">relaxation_rate</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">10</span><span class="p">)</span>
 </span><span id="__span-9-2"><a id="__codelineno-9-2" name="__codelineno-9-2" href="#__codelineno-9-2"></a><span class="nb">print</span><span class="p">(</span> <span class="n">dissipator_model</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f07de6dfe20&gt;}
+<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f80891d89a0&gt;}
 </code></pre></div>
 <p>NOTE: To pass the dissipator above to the <code>master_equation</code> method, you have to specify the relaxation rate again. </p>
 <h2 id="postprocessing">Postprocessing</h2>
@@ -268,20 +268,10 @@ RHS compiled
 </code></pre></div>
               
             </div>
-          </div><footer>
-    <div class="rst-footer-buttons" role="navigation" aria-label="Footer Navigation">
-        <a href="../k_potentials/" class="btn btn-neutral float-left" title="Potentials"><span class="icon icon-circle-arrow-left"></span> Previous</a>
-        <a href="../la_lindblad/" class="btn btn-neutral float-right" title="Dissipation">Next <span class="icon icon-circle-arrow-right"></span></a>
-    </div>
-
-  <hr/>
-
-  <div role="contentinfo">
-    <!-- Copyright etc -->
-  </div>
-
-  Built with <a href="https://www.mkdocs.org/">MkDocs</a> using a <a href="https://github.com/readthedocs/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
-</footer>
+          </div><div style="text-align: center; font-size: 14px; padding: 10px;">
+    <strong>Documentation Version:</strong> stable |
+    <strong>Commit:</strong> 3be1e8f07478c7a30dd5379b4663cb1619047601
+</div>
           
         </div>
       </div>
