deploy: 415af1d2e7e45d058f1df8cc68132d1fb9c8abb2

--- a/dev/tutorials/a_getting_started/index.html
+++ b/dev/tutorials/a_getting_started/index.html
@@ -159,6 +159,7 @@
  &#39;tag&#39;: &#39;a tag contains arbitrary information&#39;,
  &#39;spin&#39;: None,
  &#39;atom_name&#39;: None,
+ &#39;kind&#39;: None,
  &#39;group_id&#39;: GroupId(id=1)}
 </code></pre></div>
 <p>From the output above, we see that orbitals are characterized by their position and a user-defined tag. They are placed at the origin by default. We can change this by passing an explicit position.</p>
@@ -173,6 +174,7 @@
  &#39;tag&#39;: &#39;a new, shifted orbital&#39;,
  &#39;spin&#39;: None,
  &#39;atom_name&#39;: None,
+ &#39;kind&#39;: None,
  &#39;group_id&#39;: GroupId(id=2)}
 </code></pre></div>
 <h2 id="materials">Materials</h2>
@@ -343,7 +345,7 @@ RHS compiled
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 240209c617098fe5e023e4706b0d11247d013b80
+    <strong>Commit:</strong> 415af1d2e7e45d058f1df8cc68132d1fb9c8abb2
 </div>
           
         </div>
