--- a/dev/index.html
+++ b/dev/index.html
@@ -31,7 +31,8 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href="." class="icon icon-home"> GRANAD
+          <a href=".">
+          <img src="docs/logo.png" class="logo" alt="Logo"/>
         </a>
         <div class="version">
           development
@@ -195,7 +196,7 @@
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 42f2e797678a1477df08ee77f0b9fd2b5f7ec682
+    <strong>Commit:</strong> fd53598626e36e8cce760bc7b293c63c427415fe
 </div>
           
         </div>
@@ -233,5 +234,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2026-01-30 17:12:13.139653+00:00
+Build Date UTC : 2026-01-30 17:23:42.085863+00:00
 -->
