--- a/dev/tutorials/l_master/index.html
+++ b/dev/tutorials/l_master/index.html
@@ -31,7 +31,8 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href="../.." class="icon icon-home"> GRANAD
+          <a href="../..">
+          <img src="../../docs/logo.png" class="logo" alt="Logo"/>
         </a>
         <div class="version">
           development
@@ -253,7 +254,7 @@ No artists with labels found to put in legend.  Note that artists whose label st
 <div class="language-python highlight"><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="n">dissipator_model</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_dissipator</span><span class="p">(</span><span class="n">relaxation_rate</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">10</span><span class="p">)</span>
 </span><span id="__span-9-2"><a id="__codelineno-9-2" name="__codelineno-9-2" href="#__codelineno-9-2"></a><span class="nb">print</span><span class="p">(</span> <span class="n">dissipator_model</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f1f4d12bf60&gt;}
+<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f2bed5bbf60&gt;}
 </code></pre></div>
 <p>NOTE: To pass the dissipator above to the <code>master_equation</code> method, you have to specify the relaxation rate again. </p>
 <h2 id="postprocessing">Postprocessing</h2>
@@ -276,7 +277,7 @@ RHS compiled
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 42f2e797678a1477df08ee77f0b9fd2b5f7ec682
+    <strong>Commit:</strong> fd53598626e36e8cce760bc7b293c63c427415fe
 </div>
           
         </div>
