--- a/dev/tutorials/o_topology/index.html
+++ b/dev/tutorials/o_topology/index.html
@@ -31,7 +31,8 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-          <a href="../.." class="icon icon-home"> GRANAD
+          <a href="../..">
+          <img src="../../docs/logo.png" class="logo" alt="Logo"/>
         </a>
         <div class="version">
           development
@@ -307,7 +308,7 @@ RHS compiled
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 42f2e797678a1477df08ee77f0b9fd2b5f7ec682
+    <strong>Commit:</strong> fd53598626e36e8cce760bc7b293c63c427415fe
 </div>
           
         </div>
