--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
           <a href=".">
-          <img src="docs/logo.png" class="logo" alt="Logo"/>
+          <img src="img/logo.png" class="logo" alt="Logo"/>
         </a>
         <div class="version">
           stable
@@ -190,7 +190,7 @@
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> stable |
-    <strong>Commit:</strong> 9152ffe05d1b4e09a4d78db2fe72e731678864ac
+    <strong>Commit:</strong> fc3c063493b465f470caee1b36ce387f5e53e959
 </div>
           
         </div>
@@ -228,5 +228,5 @@
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2026-01-30 17:25:27.448230+00:00
+Build Date UTC : 2026-01-30 17:47:45.558080+00:00
 -->
